[package]
name = "ttd"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.97"
base64 = "0.22.1"
bincode = "2.0.1"
clap = { version = "4.5.32", features = ["derive"] }
ctrlc = "3.4.5"
dirs = "6.0.0"
env_logger = "0.11.7"
log = "0.4.27"
rmp-serde = "1.3.0"
serde = { version = "1.0.219", features = ["derive"] }
signal-hook = "0.3.17"
toml = "0.8.20"

[[bin]]
name = "ttd"
path = "src/bin/daemon.rs"

[[bin]]
name = "ttctl"
path = "src/bin/cli.rs"
