[package]
name = "ttd"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
clap = { version = "4.5.38", features = ["derive"] }
ctrlc = "3.4.7"
dirs = "6.0.0"
env_logger = "0.11.8"
evdev = { version = "0.13.1", features = ["stream-trait"] }
jiff = "0.2.14"
log = "0.4.27"
rmp-serde = "1.3.0"
serde = { version = "1.0.219", features = ["derive"] }
tokio = { version = "1.45.0", features = ["full", "rt"] }
tokio-stream = "0.1.17"
toml = "0.8.22"

[[bin]]
name = "ttd"
path = "src/bin/daemon.rs"

[[bin]]
name = "ttctl"
path = "src/bin/cli.rs"

[[bin]]
name = "actived"
path = "src/bin/actived.rs"
